# lol-item-recommender

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Figures/: Figure1.ipynb  Figure2.ipynb
app/: api.py  model_utils.py  ui.html
data/: ChampionTbl.csv  DATASET_NOTES.md  data_summary.txt  item_metadata.csv  model_item_labels.txt  prepare_dataset.py
models/: mlp_model.py  train_baseline.py  train_mlp.py
preprocessing/: __init__.py  encode.py
saved_models/: encoders.joblib
src/item_rec_page/: __init__.py  cli.py  config.py  dataset.py  live_client.py  modeling.py  riot_api.py
utils/: game_logic.py  item_names.py
